--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -17,14 +17,14 @@
     <string name="label_param">Параметры</string>
 
     <string name="information">Информация</string>
-	
-	<string name="button_ok">ОК</string>
+
+    <string name="button_ok">ОК</string>
     <string name="button_cancel">Отмена</string>
     <string name="button_reset">Сброс</string>
-	
-	<string name="dsp">Двойной сферический маятник (3D)</string>
+
+    <string name="dsp">Двойной сферический маятник (3D)</string>
     <string name="dsp_subtitle">Трехмерное обобщение двойного маятника дает еще более хаотическую картину!</string>
-    
+
     <string name="DSP_label_l">l&lt;sub&gt;&lt;small&gt;&lt;small&gt;1&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (м) =</string>
     <string name="DSP_label_l2">l&lt;sub&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (м) =</string>
     <string name="DSP_label_m">m&lt;sub&gt;&lt;small&gt;&lt;small&gt;1&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (кг) =</string>
@@ -44,11 +44,11 @@
     <string name="DSP_label_phv0">φ&lt;sub&gt;&lt;small&gt;&lt;small&gt;1 t&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (с&lt;sup&gt;&lt;small&gt;&lt;small&gt;-1&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
     <string name="DSP_label_phv2">φ&lt;sub&gt;&lt;small&gt;&lt;small&gt;2 t&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (с&lt;sup&gt;&lt;small&gt;&lt;small&gt;-1&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
     <string name="DSP_label_trlength">Длина следа</string>
-	
-	<string name="sp">Сферический маятник (3D)</string>
+
+    <string name="sp">Сферический маятник (3D)</string>
     <string name="sp_subtitle">Трехмерное обобщение математического маятника дает несколько более сложное движение.</string>
-	
-	<string name="SP_label_l">l (м) =</string>
+
+    <string name="SP_label_l">l (м) =</string>
     <string name="SP_label_m">m (кг) =</string>
     <string name="SP_label_g">g (м/с&lt;sup&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
     <string name="SP_label_k">γ (мг/с) =</string>
@@ -61,12 +61,12 @@
     <string name="SP_label_ph0">φ&lt;sub&gt;&lt;small&gt;&lt;small&gt;0&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; =</string>
     <string name="SP_label_phv0">φ&lt;sub&gt;&lt;small&gt;&lt;small&gt;0 t&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (с&lt;sup&gt;&lt;small&gt;&lt;small&gt;-1&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
     <string name="SP_label_trlength">Длина следа</string>
-	
-	
-	<string name="mp">Математический маятник (2D)</string>
+
+
+    <string name="mp">Математический маятник (2D)</string>
     <string name="mp_subtitle">Наиболее простой маятник.</string>
-	
-	<string name="MP_label_l">l (м) =</string>
+
+    <string name="MP_label_l">l (м) =</string>
     <string name="MP_label_m">m (кг) =</string>
     <string name="MP_label_g">g (м/с&lt;sup&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
     <string name="MP_label_k">γ (мг/с) =</string>
@@ -77,11 +77,11 @@
     <string name="MP_label_th0">θ&lt;sub&gt;&lt;small&gt;&lt;small&gt;0&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; =</string>
     <string name="MP_label_thv0">θ&lt;sub&gt;&lt;small&gt;&lt;small&gt;0 t&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (с&lt;sup&gt;&lt;small&gt;&lt;small&gt;-1&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
     <string name="MP_label_trlength">Длина следа</string>
-	
-	
-	<string name="dp">Двойной маятник (2D)</string>
+
+
+    <string name="dp">Двойной маятник (2D)</string>
     <string name="dp_subtitle">Двойной маятник является наиболее простым примером системы, для которой характерными являются хаотическое движение и сильная чувствительность к начальным условиям.</string>
-    
+
     <string name="DP_label_l">l&lt;sub&gt;&lt;small&gt;&lt;small&gt;1&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (м) =</string>
     <string name="DP_label_l2">l&lt;sub&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (м) =</string>
     <string name="DP_label_m">m&lt;sub&gt;&lt;small&gt;&lt;small&gt;1&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (кг) =</string>
@@ -96,81 +96,81 @@
     <string name="DP_label_th2">θ&lt;sub&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; =</string>
     <string name="DP_label_thv0">θ&lt;sub&gt;&lt;small&gt;&lt;small&gt;1 t&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (с&lt;sup&gt;&lt;small&gt;&lt;small&gt;-1&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
     <string name="DP_label_thv2">θ&lt;sub&gt;&lt;small&gt;&lt;small&gt;2 t&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (с&lt;sup&gt;&lt;small&gt;&lt;small&gt;-1&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
-	<string name="DP_label_trlength">Длина следа</string>
-	
-	<string name="sp3d">Пружинный маятник (3D)</string>
+    <string name="DP_label_trlength">Длина следа</string>
+
+    <string name="sp3d">Пружинный маятник (3D)</string>
     <string name="sp3d_subtitle">Груз, присоединенный к пружине. Движение в 3D пространстве.</string>
-    
+
     <string name="SP3D_label_aa">a (м) =</string>
     <string name="SP3D_label_m">m (кг) =</string>
     <string name="SP3D_label_g">g (м/с&lt;sup&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
     <string name="SP3D_label_k">k (кг/с&lt;sup&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
-	<string name="SP3D_label_gam">γ (мг/с) =</string>
+    <string name="SP3D_label_gam">γ (мг/с) =</string>
     <string name="SP3D_init">Начальные условия</string>
     <string name="SP3D_init_rand">Случайные</string>
     <string name="SP3D_init_fixed">Фиксированные</string>
     <string name="SP3D_trajectory">Траектория</string>
-	<string name="SP3D_label_x0">x (м) =</string>
+    <string name="SP3D_label_x0">x (м) =</string>
     <string name="SP3D_label_xv0">x&lt;sub&gt;&lt;small&gt;&lt;small&gt;t&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (м/с) =</string>
     <string name="SP3D_label_y0">y (м) =</string>
     <string name="SP3D_label_yv0">y&lt;sub&gt;&lt;small&gt;&lt;small&gt;t&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (м/с) =</string>
     <string name="SP3D_label_z0">z (м) =</string>
     <string name="SP3D_label_zv0">z&lt;sub&gt;&lt;small&gt;&lt;small&gt;t&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (м/с) =</string>
-	<string name="SP3D_label_trlength">Длина следа</string>
-	
-	
-	<string name="sp2d">Пружинный маятник (2D)</string>
+    <string name="SP3D_label_trlength">Длина следа</string>
+
+
+    <string name="sp2d">Пружинный маятник (2D)</string>
     <string name="sp2d_subtitle">Груз, присоединенный к пружине. Движение в 2D пространстве.</string>
-    
+
     <string name="SP2D_label_aa">a (м) =</string>
     <string name="SP2D_label_m">m (кг) =</string>
     <string name="SP2D_label_g">g (м/с&lt;sup&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
     <string name="SP2D_label_k">k (кг/с&lt;sup&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
-	<string name="SP2D_label_gam">γ (мг/с) =</string>
+    <string name="SP2D_label_gam">γ (мг/с) =</string>
     <string name="SP2D_init">Начальные условия</string>
     <string name="SP2D_init_rand">Случайные</string>
     <string name="SP2D_init_fixed">Фиксированные</string>
     <string name="SP2D_trajectory">Траектория</string>
-	<string name="SP2D_label_x0">x (м) =</string>
+    <string name="SP2D_label_x0">x (м) =</string>
     <string name="SP2D_label_xv0">x&lt;sub&gt;&lt;small&gt;&lt;small&gt;t&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (м/с) =</string>
     <string name="SP2D_label_y0">y (м) =</string>
     <string name="SP2D_label_yv0">y&lt;sub&gt;&lt;small&gt;&lt;small&gt;t&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (м/с) =</string>
-	<string name="SP2D_label_trlength">Длина следа</string>
-	
-	
-	<string name="smp">Пружинно-математический маятник (2D)</string>
+    <string name="SP2D_label_trlength">Длина следа</string>
+
+
+    <string name="smp">Пружинно-математический маятник (2D)</string>
     <string name="smp_subtitle">Математический маятник, присоединенный к концу пружины.</string>
-    
+
     <string name="SMP_label_aa">a (м) =</string>
     <string name="SMP_label_l">l (м) =</string>
     <string name="SMP_label_m1">m&lt;sub&gt;&lt;small&gt;&lt;small&gt;1&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (кг) =</string>
     <string name="SMP_label_m2">m&lt;sub&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (кг) =</string>
     <string name="SMP_label_g">g (м/с&lt;sup&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
     <string name="SMP_label_k">k (кг/с&lt;sup&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
-	<string name="SMP_label_gam">γ (мг/с) =</string>
+    <string name="SMP_label_gam">γ (мг/с) =</string>
     <string name="SMP_init">Начальные условия</string>
     <string name="SMP_init_rand">Случайные</string>
     <string name="SMP_init_fixed">Фиксированные</string>
     <string name="SMP_trajectory">Траектория</string>
-	<string name="SMP_label_s">s (м) =</string>
+    <string name="SMP_label_s">s (м) =</string>
     <string name="SMP_label_sv">s&lt;sub&gt;&lt;small&gt;&lt;small&gt;t&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (м/с) =</string>
     <string name="SMP_label_th0">θ&lt;sub&gt;&lt;small&gt;&lt;small&gt;1&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; =</string>
     <string name="SMP_label_th2">θ&lt;sub&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; =</string>
     <string name="SMP_label_thv0">θ&lt;sub&gt;&lt;small&gt;&lt;small&gt;1 t&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (с&lt;sup&gt;&lt;small&gt;&lt;small&gt;-1&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
     <string name="SMP_label_thv2">θ&lt;sub&gt;&lt;small&gt;&lt;small&gt;2 t&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (с&lt;sup&gt;&lt;small&gt;&lt;small&gt;-1&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
-	<string name="SMP_label_trlength">Длина следа</string>
-	
-	
-	<string name="ssp">Пружинно-сферический маятник (3D)</string>
+    <string name="SMP_label_trlength">Длина следа</string>
+
+
+    <string name="ssp">Пружинно-сферический маятник (3D)</string>
     <string name="ssp_subtitle">Сферический маятник, присоединенный к концу пружины. Движение в 3D пространстве.</string>
-    
+
     <string name="SSP_label_a">a (м) =</string>
     <string name="SSP_label_l">l (м) =</string>
     <string name="SSP_label_m">m&lt;sub&gt;&lt;small&gt;&lt;small&gt;1&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (кг) =</string>
     <string name="SSP_label_m2">m&lt;sub&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (кг) =</string>
     <string name="SSP_label_g">g (м/с&lt;sup&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
     <string name="SSP_label_k">k (кг/с&lt;sup&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
-	<string name="SSP_label_gam">γ (мг/с) =</string>
+    <string name="SSP_label_gam">γ (мг/с) =</string>
     <string name="SSP_init">Начальные условия</string>
     <string name="SSP_init_rand">Случайные</string>
     <string name="SSP_init_fixed">Фиксированные</string>
@@ -211,8 +211,7 @@
 
     <string name="pick_color">Выберите цвет</string>
 
-    <string name="google_play">Оценить приложение</string>
-    <string name="more_apps">Больше приложений</string>
+    <string name="github">Посмотреть на GitHub</string>
 
     <string name="pw">Эффект волны маятников (3D)</string>
     <string name="pw_subtitle">Завораживающий эффект бегущей волны маятников возникает при комбинировании множества маяников!</string>
@@ -237,16 +236,17 @@
 
     <string name="settings">Настройки</string>
     <string name="share">Поделиться</string>
-    <string name="share_text">Моделирование и визуализицая движения различных маятниковых систем в режиме реального времени\nhttps://play.google.com/store/apps/details?id=com.ikartehfox.pendulumstudio</string>
+    <string name="share_text">Моделирование и визуализицая движения различных маятниковых систем в режиме реального времени\nhttps://github.com/iKarTehFox/pendulum-studio</string>
     <string name="version">Версия:</string>
-    <string name="PWLimit">Слишком много маятников! Ставим 100...</string>
-    <string name="TraceInvalid">Слишком длинная траектория! Ставим 100000...</string>
-    <string name="TraceTooLong">Слишком длинная траектория! Используем старое значение...</string>
+    <string name="PWLimit">Слишком много маятников! Ставим 100…</string>
+    <string name="TraceInvalid">Слишком длинная траектория! Ставим 100000…</string>
+    <string name="TraceTooLong">Слишком длинная траектория! Используем старое значение…</string>
     <string name="share_subject">Pendulum Studio app for Android</string>
-    <string name="share_via" >Поделиться этим приложением через</string>
-    <string name="PWg" >Слишком малое значение g! Будет использовано минимальное значение...</string>
+    <string name="share_via">Поделиться этим приложением через</string>
+    <string name="PWg">Слишком малое значение g! Будет использовано минимальное значение…</string>
     <string name="SP_trajectory_infinite">Безконечн.</string>
-   <string name="trajectory_infinite">Безконечн.</string>
+    <string name="trajectory_infinite">Безконечн.</string>
     <string name="pref_buttons_fade">Автоскрытие кнопок</string>
+    <string name="pref_buttons_fade_summary">Автоматически скрывать кнопки после отсутствия активности</string>
 
 </resources>
