--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -17,14 +17,14 @@
     <string name="label_param">Параметри</string>
 
     <string name="information">Інформація</string>
-	
-	<string name="button_ok">ОК</string>
+
+    <string name="button_ok">ОК</string>
     <string name="button_cancel">Скасувати</string>
     <string name="button_reset">Скинути</string>
-	
-	<string name="dsp">Подвійний сферичний маятник (3D)</string>
+
+    <string name="dsp">Подвійний сферичний маятник (3D)</string>
     <string name="dsp_subtitle">Тривимірне узагальнення подвійного маятнику дає ще більш хаотичну картину!</string>
-    
+
     <string name="DSP_label_l">l&lt;sub&gt;&lt;small&gt;&lt;small&gt;1&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (м) =</string>
     <string name="DSP_label_l2">l&lt;sub&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (м) =</string>
     <string name="DSP_label_m">m&lt;sub&gt;&lt;small&gt;&lt;small&gt;1&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (кг) =</string>
@@ -44,11 +44,11 @@
     <string name="DSP_label_phv0">φ&lt;sub&gt;&lt;small&gt;&lt;small&gt;1 t&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (с&lt;sup&gt;&lt;small&gt;&lt;small&gt;-1&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
     <string name="DSP_label_phv2">φ&lt;sub&gt;&lt;small&gt;&lt;small&gt;2 t&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (с&lt;sup&gt;&lt;small&gt;&lt;small&gt;-1&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
     <string name="DSP_label_trlength">Довжина сліду</string>
-	
-	<string name="sp">Сферичний маятник (3D)</string>
+
+    <string name="sp">Сферичний маятник (3D)</string>
     <string name="sp_subtitle">Тривимірне узагальнення математичного маятнику дає дещо більш складний рух.</string>
-	
-	<string name="SP_label_l">l (м) =</string>
+
+    <string name="SP_label_l">l (м) =</string>
     <string name="SP_label_m">m (кг) =</string>
     <string name="SP_label_g">g (м/с&lt;sup&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
     <string name="SP_label_k">γ (мг/с) =</string>
@@ -61,12 +61,12 @@
     <string name="SP_label_ph0">φ&lt;sub&gt;&lt;small&gt;&lt;small&gt;0&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; =</string>
     <string name="SP_label_phv0">φ&lt;sub&gt;&lt;small&gt;&lt;small&gt;0 t&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (с&lt;sup&gt;&lt;small&gt;&lt;small&gt;-1&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
     <string name="SP_label_trlength">Довжина сліду</string>
-	
-	
-	<string name="mp">Математичний маятник (2D)</string>
+
+
+    <string name="mp">Математичний маятник (2D)</string>
     <string name="mp_subtitle">Найбільш простий маятник.</string>
-	
-	<string name="MP_label_l">l (м) =</string>
+
+    <string name="MP_label_l">l (м) =</string>
     <string name="MP_label_m">m (кг) =</string>
     <string name="MP_label_g">g (м/с&lt;sup&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
     <string name="MP_label_k">γ (мг/с) =</string>
@@ -77,11 +77,11 @@
     <string name="MP_label_th0">θ&lt;sub&gt;&lt;small&gt;&lt;small&gt;0&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; =</string>
     <string name="MP_label_thv0">θ&lt;sub&gt;&lt;small&gt;&lt;small&gt;0 t&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (с&lt;sup&gt;&lt;small&gt;&lt;small&gt;-1&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
     <string name="MP_label_trlength">Довжина сліду</string>
-	
-	
-	<string name="dp">Подвійний маятник (2D)</string>
+
+
+    <string name="dp">Подвійний маятник (2D)</string>
     <string name="dp_subtitle">Подвійний маятник є найбільш простим прикладом системи, для якої характерними є хаотичний рух та сильна чутливість до початкових умов.</string>
-    
+
     <string name="DP_label_l">l&lt;sub&gt;&lt;small&gt;&lt;small&gt;1&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (м) =</string>
     <string name="DP_label_l2">l&lt;sub&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (м) =</string>
     <string name="DP_label_m">m&lt;sub&gt;&lt;small&gt;&lt;small&gt;1&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (кг) =</string>
@@ -96,81 +96,81 @@
     <string name="DP_label_th2">θ&lt;sub&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; =</string>
     <string name="DP_label_thv0">θ&lt;sub&gt;&lt;small&gt;&lt;small&gt;1 t&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (с&lt;sup&gt;&lt;small&gt;&lt;small&gt;-1&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
     <string name="DP_label_thv2">θ&lt;sub&gt;&lt;small&gt;&lt;small&gt;2 t&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (с&lt;sup&gt;&lt;small&gt;&lt;small&gt;-1&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
-	<string name="DP_label_trlength">Довжина сліду</string>
-	
-	<string name="sp3d">Пружинний маятник (3D)</string>
+    <string name="DP_label_trlength">Довжина сліду</string>
+
+    <string name="sp3d">Пружинний маятник (3D)</string>
     <string name="sp3d_subtitle">Тягар, який під\'єднано до пружини. Рух у 3D просторі.</string>
-    
+
     <string name="SP3D_label_aa">a (м) =</string>
     <string name="SP3D_label_m">m (кг) =</string>
     <string name="SP3D_label_g">g (м/с&lt;sup&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
     <string name="SP3D_label_k">k (кг/с&lt;sup&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
-	<string name="SP3D_label_gam">γ (мг/с) =</string>
+    <string name="SP3D_label_gam">γ (мг/с) =</string>
     <string name="SP3D_init">Початкові умови</string>
     <string name="SP3D_init_rand">Випадкові</string>
     <string name="SP3D_init_fixed">Фіксовані</string>
     <string name="SP3D_trajectory">Траекторія</string>
-	<string name="SP3D_label_x0">x (м) =</string>
+    <string name="SP3D_label_x0">x (м) =</string>
     <string name="SP3D_label_xv0">x&lt;sub&gt;&lt;small&gt;&lt;small&gt;t&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (м/с) =</string>
     <string name="SP3D_label_y0">y (м) =</string>
     <string name="SP3D_label_yv0">y&lt;sub&gt;&lt;small&gt;&lt;small&gt;t&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (м/с) =</string>
     <string name="SP3D_label_z0">z (м) =</string>
     <string name="SP3D_label_zv0">z&lt;sub&gt;&lt;small&gt;&lt;small&gt;t&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (м/с) =</string>
-	<string name="SP3D_label_trlength">Довжина сліду</string>
-	
-	
-	<string name="sp2d">Пружинний маятник (2D)</string>
+    <string name="SP3D_label_trlength">Довжина сліду</string>
+
+
+    <string name="sp2d">Пружинний маятник (2D)</string>
     <string name="sp2d_subtitle">Тягар, який під\'єднано до пружини. Рух у 2D просторі.</string>
-    
+
     <string name="SP2D_label_aa">a (м) =</string>
     <string name="SP2D_label_m">m (кг) =</string>
     <string name="SP2D_label_g">g (м/с&lt;sup&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
     <string name="SP2D_label_k">k (кг/с&lt;sup&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
-	<string name="SP2D_label_gam">γ (мг/с) =</string>
+    <string name="SP2D_label_gam">γ (мг/с) =</string>
     <string name="SP2D_init">Початкові умови</string>
     <string name="SP2D_init_rand">Випадкові</string>
     <string name="SP2D_init_fixed">Фіксовані</string>
     <string name="SP2D_trajectory">Траекторія</string>
-	<string name="SP2D_label_x0">x (м) =</string>
+    <string name="SP2D_label_x0">x (м) =</string>
     <string name="SP2D_label_xv0">x&lt;sub&gt;&lt;small&gt;&lt;small&gt;t&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (м/с) =</string>
     <string name="SP2D_label_y0">y (м) =</string>
     <string name="SP2D_label_yv0">y&lt;sub&gt;&lt;small&gt;&lt;small&gt;t&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (м/с) =</string>
-	<string name="SP2D_label_trlength">Довжина сліду</string>
-	
-	
-	<string name="smp">Пружинно-математичний маятник (2D)</string>
+    <string name="SP2D_label_trlength">Довжина сліду</string>
+
+
+    <string name="smp">Пружинно-математичний маятник (2D)</string>
     <string name="smp_subtitle">Математичний маятник, який під\'єднано до кінця пружини.</string>
-    
+
     <string name="SMP_label_aa">a (м) =</string>
     <string name="SMP_label_l">l (м) =</string>
     <string name="SMP_label_m1">m&lt;sub&gt;&lt;small&gt;&lt;small&gt;1&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (кг) =</string>
     <string name="SMP_label_m2">m&lt;sub&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (кг) =</string>
     <string name="SMP_label_g">g (м/с&lt;sup&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
     <string name="SMP_label_k">k (кг/с&lt;sup&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
-	<string name="SMP_label_gam">γ (мг/с) =</string>
+    <string name="SMP_label_gam">γ (мг/с) =</string>
     <string name="SMP_init">Початкові умови</string>
     <string name="SMP_init_rand">Випадкові</string>
     <string name="SMP_init_fixed">Фіксовані</string>
     <string name="SMP_trajectory">Траекторія</string>
-	<string name="SMP_label_s">s (м) =</string>
+    <string name="SMP_label_s">s (м) =</string>
     <string name="SMP_label_sv">s&lt;sub&gt;&lt;small&gt;&lt;small&gt;t&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (м/с) =</string>
     <string name="SMP_label_th0">θ&lt;sub&gt;&lt;small&gt;&lt;small&gt;1&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; =</string>
     <string name="SMP_label_th2">θ&lt;sub&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; =</string>
     <string name="SMP_label_thv0">θ&lt;sub&gt;&lt;small&gt;&lt;small&gt;1 t&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (с&lt;sup&gt;&lt;small&gt;&lt;small&gt;-1&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
     <string name="SMP_label_thv2">θ&lt;sub&gt;&lt;small&gt;&lt;small&gt;2 t&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (с&lt;sup&gt;&lt;small&gt;&lt;small&gt;-1&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
-	<string name="SMP_label_trlength">Довжина сліду</string>
-	
-	
-	<string name="ssp">Пружинно-сферичний маятник (3D)</string>
+    <string name="SMP_label_trlength">Довжина сліду</string>
+
+
+    <string name="ssp">Пружинно-сферичний маятник (3D)</string>
     <string name="ssp_subtitle">Сферичний маятник, який під\'єднано до кінця пружини. Рух у 3D просторі.</string>
-    
+
     <string name="SSP_label_a">a (м) =</string>
     <string name="SSP_label_l">l (м) =</string>
     <string name="SSP_label_m">m&lt;sub&gt;&lt;small&gt;&lt;small&gt;1&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (кг) =</string>
     <string name="SSP_label_m2">m&lt;sub&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sub&gt; (кг) =</string>
     <string name="SSP_label_g">g (м/с&lt;sup&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
     <string name="SSP_label_k">k (кг/с&lt;sup&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;) =</string>
-	<string name="SSP_label_gam">γ (мг/с) =</string>
+    <string name="SSP_label_gam">γ (мг/с) =</string>
     <string name="SSP_init">Початкові умови</string>
     <string name="SSP_init_rand">Випадкові</string>
     <string name="SSP_init_fixed">Фіксовані</string>
@@ -211,8 +211,7 @@
 
     <string name="pick_color">Виберіть колір</string>
 
-    <string name="google_play">Оцінити додаток</string>
-    <string name="more_apps">Більше додатків</string>
+    <string name="github">Переглянути на GitHub</string>
 
     <string name="pw">Ефект хвилі маятників (3D)</string>
     <string name="pw_subtitle">Заворожуючий ефект біжучої хвилі маятників виникає при комбінуванні кількох маятників!</string>
@@ -237,16 +236,17 @@
 
     <string name="settings">Налаштування</string>
     <string name="share">Поділитися</string>
-    <string name="share_text">Моделювання та візуалізация руху різних маятникових систем у режимі реального часу\nhttps://play.google.com/store/apps/details?id=com.ikartehfox.pendulumstudio</string>
+    <string name="share_text">Моделювання та візуалізация руху різних маятникових систем у режимі реального часу\nhttps://github.com/iKarTehFox/pendulum-studio</string>
     <string name="version">Версія:</string>
-    <string name="PWLimit">Занадто багато маятників! Ставимо 100...</string>
-    <string name="TraceInvalid">Занадто довга траекторія! Ставимо 100000...</string>
-    <string name="TraceTooLong">Занадто довга траекторія! Використаємо старе значення...</string>
+    <string name="PWLimit">Занадто багато маятників! Ставимо 100…</string>
+    <string name="TraceInvalid">Занадто довга траекторія! Ставимо 100000…</string>
+    <string name="TraceTooLong">Занадто довга траекторія! Використаємо старе значення…</string>
     <string name="share_subject">Pendulum Studio app for Android</string>
-    <string name="share_via" >Поділитися цим додатком через</string>
-    <string name="PWg" >Занадто мале значення g! Буде використано мінімально можливе...</string>
+    <string name="share_via">Поділитися цим додатком через</string>
+    <string name="PWg">Занадто мале значення g! Буде використано мінімально можливе…</string>
     <string name="SP_trajectory_infinite">Безмежн.</string>
-   <string name="trajectory_infinite">Безмежн.</string>
+    <string name="trajectory_infinite">Безмежн.</string>
     <string name="pref_buttons_fade">Автоприховання кнопок</string>
+    <string name="pref_buttons_fade_summary">Автоматично приховувати кнопки після відсутності активності</string>
 
 </resources>
