--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -205,6 +205,7 @@
     <string name="version">Version:</string>
     <string name="btn_finish_about_label">Close</string>
     <string name="about_text_2">© Volodymyr Vovchenko</string>
+    <string name="about_text_3" translatable="false">Updated by iKarTehFox</string>
 
     <string name="pendulum_color">Pendulum color:</string>
     <string name="pendulum_color_1">Pendulum 1 color:</string>
@@ -213,8 +214,7 @@
 
     <string name="pick_color">Pick a color</string>
 
-    <string name="google_play">Rate this app</string>
-    <string name="more_apps">More apps</string>
+    <string name="github">View on GitHub</string>
 
     <string name="pw">Pendulum Wave Effect (3D)</string>
     <string name="pw_subtitle">Pendulum Wave Effect appears when multiple pendulums are combined!</string>
@@ -232,10 +232,10 @@
     <string name="PW_label_NP2">Number of pendulums</string>
     <string name="PW_label_NT2">Number of periods</string>
 
-    <string name="TraceTooLong">Trace too long! Setting to 100000...</string>
-    <string name="TraceInvalid">Trace too long! Reverting to old value...</string>
+    <string name="TraceTooLong">Trace too long! Setting to 100000…</string>
+    <string name="TraceInvalid">Trace too long! Reverting to old value…</string>
 
-    <string name="PWLimit">Too many pendulums! Setting to 100...</string>
+    <string name="PWLimit">Too many pendulums! Setting to 100…</string>
 
     <string name="pref_fullscreen">Full screen</string>
     <string name="pref_fullscreen_summary">Show simulation in full screen mode</string>
@@ -245,10 +245,10 @@
 
     <string name="settings">Settings</string>
     <string name="share">Share</string>
-    <string name="share_text">Simulation and visualization of motion of various pendulum systems in real-time\nhttps://play.google.com/store/apps/details?id=com.ikartehfox.pendulumstudio</string>
+    <string name="share_text">Simulation and visualization of motion of various pendulum systems in real-time\nhttps://github.com/iKarTehFox/pendulum-studio</string>
     <string name="share_subject">Pendulum Studio app for Android</string>
     <string name="share_via" >Share this app via</string>
-    <string name="PWg" >Too small g! Setting to minimum value...</string>
+    <string name="PWg" >Too small g! Setting to minimum value…</string>
     <string name="trajectory_infinite">Infinite</string>
     <string name="SP_trajectory_infinite">Infinite</string>
     <string name="pref_buttons_fade">Buttons auto-hide</string>
